# mytool-gpui

./: .env  .gitignore  001.md  AGENTS.md  BATCH_OPERATIONS_GUIDE.md  CLAUDE.md  CLAUDE_zh.md  CODE_ORGANIZATION_REFACTORING_SUMMARY.md  Cargo.toml  DATABASE_CONNECTION_OPTIMIZATION.md  DATA_FLOW_INTEGRATION_COMPLETE.md  DATA_FLOW_OPTIMIZATION.md  DATA_FLOW_OPTIMIZATION_SUMMARY.md  ERROR_HANDLING_GUIDE.md  INDEX_OPTIMIZATION_COMPLETE.md  OBSERVER_OPTIMIZATION_COMPLETE.md  OPTIMIZATION_ACHIEVEMENTS.md  OPTIMIZATION_COMPLETE_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION_PLAN.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_SESSION_FINAL_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PHASE2_VISUAL_OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE_DATA_FLOW.md  README.md  SCHEDULE_BUTTON_FIXES.md  SESSION_SUMMARY_2026-02-20.md  SHORTCUTS_GUIDE.md  VISUAL_ENHANCEMENTS_EXAMPLES.md  VISUAL_OPTIMIZATION_GUIDE.md  VISUAL_OPTIMIZATION_SESSION_2.md  VISUAL_OPTIMIZATION_SESSION_3.md  application.development.toml  application.toml  check_db.rs  components优化.md  data_storage_redesign.md  db.sqlite  db.sqlite-shm  db.sqlite-wal  (+16 more)
crates/gconfig/: Cargo.toml
crates/gconfig/src/: app_settings_cfg.rs  crypto.rs  database_cfg.rs  lib.rs  logging_cfg.rs  server_cfg.rs
crates/my_components/: Cargo.toml
crates/my_components/src/: icon.rs  icon1.rs  lib.rs
crates/my_components/src/sidebar/: board.rs  footer.rs  group.rs  header.rs  menu.rs  mod.rs
crates/my_components/src/time/: calendar.rs  date_picker.rs  utils.rs
crates/mytool/: Cargo.toml  build.rs
crates/mytool/examples/: test_pinned.rs
crates/mytool/locales/: ui.yml
crates/mytool/resources/windows/: mytool.rc
crates/mytool/src/: accordion_story.rs  app_menus.rs  assets.rs  calendar_story.rs  color_picker_story.rs  component_manager.rs  crypto.rs  date_picker_story.rs  db.rs  drawer_story.rs  error_handler.rs  gallery.rs  lib.rs  lib.rs1  list_story.rs  main.rs  modal_story.rs  paths.rs  project_story.rs  scrollable_story.rs  sheet_story.rs  sidebar_story.1.rs  sidebar_story.rs  sidebar_story1.rs  state.rs  story_container.rs  story_root.rs  story_section.rs  story_state.rs  table_story.rs  themes.rs  tiles.rs  title_bar.rs  todo_story.rs  tooltip_story.rs  utils.rs  visual_enhancements.rs  welcome_story.rs  workspace.rs
crates/mytool/src/actions/: item.rs  label.rs  mod.rs  project.rs
crates/mytool/src/components/: attachment_button.rs  button_factory.rs  button_macros.rs  color_group.rs  color_picker.rs  date_picker.rs  dialog.rs  dialog_helper.rs  drop_btn.rs  dropbtn_priority.rs  dropbtn_project.rs  dropbtn_section.rs  dropdown_button.rs  item_info.rs  item_row.rs  label_select.rs  labels_button.rs  labels_picker.rs  labels_popover.rs  list_select.rs  list_story.rs  mod.rs  popover_base.rs  popover_list.rs  popover_list_mixin.rs  popover_reminder.rs  popover_schedule.rs  priority_button.rs  project_button.rs  reminder_button.rs  repeat_config.rs  schedule_button.rs  section_button.rs  table_story.rs  time_picker.rs  优化.md
crates/mytool/src/core/: error_handler.rs  mod.rs  notification.rs  shortcuts.rs  tokio_runtime.rs
crates/mytool/src/layouts/: header_bar.rs  item_row.rs  list_story.rs  mod.rs
crates/mytool/src/plugins/: config.rs  mod.rs  plugin.rs  registry.rs
crates/mytool/src/service/: attachment.rs  item.rs  label.rs  mod.rs  project.rs  reminder.rs  section.rs
crates/mytool/src/state/: database.rs  item.rs  label.rs  project.rs
crates/mytool/src/state_service/: item.rs  label.rs  reminder.rs  section.rs
crates/mytool/src/stories/: list_story.rs  mod.rs  sheet_story.rs  todo_story.rs  welcome_story.rs
crates/mytool/src/todo_actions/: attachment.rs  batch_operations.rs  complete_item.rs  incremental_actions.rs  item.rs  label.rs  mod.rs  pinned_item.rs  project.rs  project_item.rs  reminder.rs  scheduled_item.rs  section.rs  store_actions.rs  today_item.rs
crates/mytool/src/todo_state/: complete_item.rs  database.rs  item.rs  item_completed.rs  item_inbox.rs  item_pinned.rs  item_scheduled.rs  item_today.rs  label.rs  mod.rs  pinned_item.rs  project.rs  project_item.rs  scheduled_item.rs  section.rs  today_item.rs  todo_store.rs
crates/mytool/src/todos_view/: board.rs  completed_board.rs  inbox_board.rs  labels_board.rs  mod.rs  pin_board.rs  project_item.rs  scheduled_board.rs  today.rs  today_board.rs  todo_container.rs
crates/mytool/src/ui/: app_menus.rs  component_manager.rs  embedded_themes.rs  gallery.rs  mod.rs
crates/mytool/src/utils/: mod.rs
crates/mytool/src/views/: board.rs  board_container.rs  completed_board.rs  inbox_board.rs  labels_board.rs  mod.rs  pin_board.rs  scheduled_board.rs  today.rs  today_board.rs  todo_container.rs
crates/mytool/src/widgets/: mod.rs  popover_list.rs
crates/mytool/tests/: pinned_save_test.rs
crates/todos/: Cargo.toml  README.md  application.toml  db.sqlite  setup.sql
crates/todos/src/: constants.rs  error.rs  lib.rs  main1.rs
crates/todos/src/app/: database.rs  database_manager.rs  error.rs  logger.rs  mod.rs  patch.rs  transaction.rs
crates/todos/src/entity/: attachments.rs  cur_temp_ids.rs  item_labels.rs  items.rs  labels.rs  mod.rs  o_events.rs  prelude.rs  projects.rs  queue.rs  reminders.rs  sections.rs  sources.rs
crates/todos/src/enums/: color.rs  filter_item_type.rs  filter_type.rs  item_priority.rs  item_type.rs  label_picker_type.rs  loading_button_type.rs  mod.rs  new_task_position.rs  notification_style.rs  object_event_key_type.rs  object_event_type.rs  object_type.rs  pane_type.rs  picker_type.rs  project_icon_style.rs  project_view_style.rs  recurrency_end_type.rs  recurrency_type.rs  reminder_type.rs  source_type.rs
crates/todos/src/filters/: all_items.rs  completed.rs  filter_item.rs  labels.rs  mod.rs  pinboard.rs  priority.rs  repeating.rs  scheduled.rs  today.rs  tomorrow.rs
crates/todos/src/objects/: attachment.rs  base.rs  color.rs  (+13 more)
crates/todos/tests/: README.md  error_test.rs  event_bus_test.rs
test/: Cargo.toml  application.toml  main.rs  model.rs
test/src/: db_content.rs  db_test.rs  main.rs  memory_leak.rs  model.rs  perf_benchmark.rs
(+265 files in other folders)
