[workspace.package]
publish = false
edition = "2024"
[workspace]
members = ["crates/mytool", "crates/todos"]

default-members = ["crates/mytool"]
resolver = "2"

[workspace.dependencies]
# inner crates
todos = { path = "crates/todos" }
mytool = { path = "crates/mytool" }
# gpui
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-macros = "0.2.2"
gpui-component = { git = "https://github.com/linruohan/gpui-component.git" }
gpui-component-assets = { git = "https://github.com/linruohan/gpui-component.git" }
# External crates
anyhow = "1.0.100"
rand = "0.8.5"
tokio = { version = "1.49.0", features = ["full"] }
rust-embed = { version = "8.11.0", features = ["include-exclude", "interpolate-folder-path"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
paste = "1.0.15"
rust-i18n = { version = "3.1.5" }
sea-orm = { version = "1.1.19", features = [
    "with-chrono",
    "with-time",
    "with-json",
    "with-uuid",
    "debug-print",
    "sqlx-sqlite",
    "with-rust_decimal",
    "runtime-tokio",
] }
winresource = "0.1.29"
rodio = "0.21.1"
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
chrono = { version = "0.4.43", features = ["serde"] }
smallvec = { version = "1.15", features = ["union"] }

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[profile.dev]
codegen-units = 16
split-debuginfo = "unpacked"
opt-level = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
rpath = false
# 禁用debug
debug = 0
strip = "debuginfo"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 8
strip = true
debug = false
