[package]
name = "gconfig"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
config = "0.15.19"
serde.workspace = true
base64.workspace = true
pbkdf2.workspace = true
aes-gcm.workspace = true
password-hash.workspace = true
thiserror.workspace = true

[lib]
doc = false

[lints]
workspace = true