[package]
name = "my_components"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { workspace = true, features = ["webview"] }
chrono.workspace = true
lunar_rust.workspace = true
rust-i18n.workspace = true
[lints]
workspace = true
