[package]
edition = "2024"
name = "mytool"
publish = false
version = "0.2.1"
[features]
inspector = ["gpui-component/inspector"]
[dependencies]
anyhow.workspace = true
chrono.workspace = true
rust-i18n.workspace = true
gpui.workspace = true
gpui-component-assets.workspace = true
gpui-component.workspace = true
raw-window-handle.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
whoami.workspace = true
rodio.workspace = true
todos.workspace = true
base64 = "0.22.1"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
aes-gcm = "0.10.3"
password-hash = "0.5.0"
sea-orm = { version = "1.1.12", features = [
    "with-chrono",
    "with-time",
    "with-json",
    "with-uuid",
    "debug-print",
    "sqlx-sqlite",
    "with-rust_decimal",
    "runtime-tokio",
] }
tokio = "1.46.1"
itertools = "0.14.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
naga = { version = "25.0.1", features = ["wgsl-in"] }
embed-resource = "3.0.4"
winresource.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["embed-resource", "winresource", "naga"]
