[package]
edition = "2024"
name = "mytool"
publish = false
version = "0.2.2"
[features]
inspector = ["gpui-component/inspector"]
[dependencies]
anyhow.workspace = true
chrono.workspace = true
rust-i18n.workspace = true
gpui.workspace = true
gpui-component-assets.workspace = true
gpui-component.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rodio.workspace = true
todos.workspace = true
base64 = "0.22.1"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
aes-gcm = "0.10.3"
password-hash = "0.5.0"
sea-orm.workspace = true
tokio.workspace = true
itertools = "0.14.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.6"
winresource.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["embed-resource", "winresource", "naga"]
