[package]
edition = "2024"
name = "mytool"
publish = false
version = "0.2.2"
[features]
inspector = ["gpui-component/inspector"]
[dependencies]
anyhow.workspace = true
chrono.workspace = true
rust-i18n.workspace = true
gpui.workspace = true
gpui-component-assets.workspace = true
gpui-component.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rodio.workspace = true
todos.workspace = true

sea-orm.workspace = true
tokio.workspace = true
itertools.workspace = true
rfd.workspace = true
toml.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource.workspace = true
winresource.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["embed-resource", "winresource", "naga"]
