[package]
name = "todos"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gconfig.workspace = true # 用于读取配置文件
strum.workspace = true
rand.workspace = true
paste.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true


[dev-dependencies]


[lib]
doc = false
# crate-type = ["cdylib"]

[lints]
workspace = true
