[package]
name = "todos"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
strum.workspace = true
rand.workspace = true
paste.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
gconfig.workspace = true


[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[lib]
doc = false
# crate-type = ["cdylib"]

[lints]
workspace = true
